<resources>
    <string name="app_name">SiPetta</string>
    <string name="signup">SIGNUP</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="message_welcome_page">Bingung mau konsultasi masalah urban-farming? Di SiPetta aja!</string>
    <string name="title_welcome_page">Selamat datang di SiPetta!</string>
    <string name="message_login_page">Masukkan email dan password.</string>
    <string name="message_signup_page">Buat akun untuk melanjutkan.</string>
    <string name="message_main_page">Selamat Datang di SiPetta.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="ques1">Apakah gejala fisik yang terlihat pada tanaman? (Daun, Batang, Akar)</string>
    <string name="ques2">Apakah terdapat bercak pada tanaman?</string>
    <string name="ques3">Apakah terdapat titik-titik pada tanaman?</string>
    <string name="ques4">Apakah terdapat lesi (kusam) atau \njamur pada tanaman?</string>
    <string name="ques5">Bagaimana kondisi di sekitar tanaman? (Cuaca, Tanah, Serangga)</string>
    <string name="a01">Daun menguning hingga kecokelatan?</string>
    <string name="a02">Daun membusuk</string>
    <string name="a03">Daun kering dan mati atau pengguguran</string>
    <string name="a04">Daun tua di atas tanah terinfeksi</string>
    <string name="a05">Daun berlendir</string>
    <string name="a06">Daun lunak dan lembek berair</string>
    <string name="a07">Pangkal batang dan daun bau busuk yang khas</string>
    <string name="a08">Daun terdapat pola mosaik</string>
    <string name="a09">Daun mengalami curling atau tepi yang mengeriting</string>
    <string name="a10">Batang dan/atau akar busuk atau rusak</string>
    <string name="a11">Bagian atas layu dan pembusukan dimulai dari \nakar ke atas</string>
    <string name="a12">Tepi daun memiliki lubang</string>
    <string name="a13">Daun tergerus</string>
    <string name="a14">Terdapat jejak makanan ulat</string>
    <string name="a15">Daun ujung mengering menjadi coklat kelabu</string>
    <string name="a16">Tepi daun tua kemerahan atau keunguan</string>
    <string name="a17">Umbi lunak membusuk dan berair</string>
    <string name="a18">Daun mati berwarna putih</string>
    <string name="a19">Batang dan akar berwarna coklat atau merah</string>
    <string name="a20">Bibit terasa lembek dan berbau khas</string>
    <string name="a21">Daun bawah rebah atau lemah dan mengecil</string>
    <string name="a22">Daun berlubang</string>
    <string name="a23">Ujung daun busuk dan basah ke bawah</string>
    <string name="a24">Batang bagian bawah lembek berlendir</string>
    <string name="a25">Akar warna merah jambu pucat atau keunguan</string>
    <string name="a26">Tidak ada</string>
    <string name="b01">Bercak basah</string>
    <string name="b02">Bercak karat</string>
    <string name="b03">Bercak bersudut</string>
    <string name="b04">Bercak coklat</string>
    <string name="b05">Bercak coklat mengendap</string>
    <string name="b06">Bercak kecil kebasahan</string>
    <string name="b07">Bercak coklat atau abu-abu</string>
    <string name="b08">Bercak pada tepi dan tidak teratur dan melebar</string>
    <string name="b09">Bercak warna terang dan gelap tidak teratur</string>
    <string name="b10">Bercak kecil cepat berkembang</string>
    <string name="b11">Bercak berwarna gelap</string>
    <string name="b12">Bercak kuning kecoklatan tidak beraturan</string>
    <string name="b13">Bercak putih atau kusam</string>
    <string name="b14">Bercak kecil melekuk</string>
    <string name="b15">Bercak agak keunguan</string>
    <string name="b16">Bercak putih kelabu</string>
    <string name="b17">Perubahan menjadi warna merah atau coklat</string>
    <string name="b18">Bercak kecil coklat</string>
    <string name="b19">Kadang bercak putih atau pink</string>
    <string name="b20">Bercak kecil menghitam</string>
    <string name="b21">Bercak hijau pucat</string>
    <string name="b22">Tidak ada</string>
    <string name="t01">Titik kecil berwarna gelap</string>
    <string name="t02">Titik kecil berwarna oranye atau coklat</string>
    <string name="t03">Titik seperti cakram menonjol keluar</string>
    <string name="t04">Titik coklat kehitaman</string>
    <string name="t05">Terdapat bintik bekas jamur</string>
    <string name="t06">Bintik besar tepi gelap tengah kering</string>
    <string name="t07">Titik halus hitam pada badan buah</string>
    <string name="t08">Tidak ada</string>
    <string name="l01">Pertumbuhan jamur bintik putih</string>
    <string name="l02">Lesi besar</string>
    <string name="l03">Jamur tanah seperti rumah laba-laba</string>
    <string name="l04">Jamur seperti jarum dan membengkok dan silindris</string>
    <string name="l05">Jamur berwarna gelap</string>
    <string name="l06">Jamur tampak seperti benang</string>
    <string name="l07">Lesi basah dan berair</string>
    <string name="l08">Lesi berkembang dan cepat busuk</string>
    <string name="l09">Mengalami nekrosis atau kematian jaringan</string>
    <string name="l10">Terdapat kutu menghisap getah tanaman</string>
    <string name="l11">Lesi busuk dan basah</string>
    <string name="l12">Terdapat bekas pertumbuhan jamur hitam dan keras</string>
    <string name="l13">Jamur hidup di tanah menjadi sumber infeksi</string>
    <string name="l14">Jamur berupa serbuk halus</string>
    <string name="l15">Lesi berbentuk cincin atau hitam</string>
    <string name="l16">Lesi hitam besar dan menyatu</string>
    <string name="l17">Lesi coklat hingga merah tua</string>
    <string name="l18">Lesi memiliki batas tidak teratur</string>
    <string name="l19">Benang jamur berwarna gelap dan bertekstur seperti kertas</string>
    <string name="l20">Lesi merah kecoklatan tepi jelas</string>
    <string name="l21">Jamur berwarna putih lembayung atau ungu</string>
    <string name="l22">Terdapat jamur berwarna putih menyerupai kapas</string>
    <string name="l23">Lesi berbentuk melingkar dan gelap</string>
    <string name="l24">Jamur menyebar ke umbi bawang</string>
    <string name="l25">Tidak ada</string>
    <string name="k01">Kelembaban udara tinggi (hangat, kabut dan embun)</string>
    <string name="k02">Cuaca kering akan busuk mengering</string>
    <string name="k03">Tanah tergenang air</string>
    <string name="k04">Terdapat air potensi penyebaran</string>
    <string name="k05">Terdapat populasi kupu-kupu yang meningkat</string>
    <string name="k06">Terdapat telur di sekitar tanah</string>
    <string name="k07">Penyerapan nutrisi dan air buruk</string>
    <string name="k08">Terdapat larva merayap di dalam daun</string>
    <string name="k09">Telur diletakkan dalam/bawah daun</string>
    <string name="k10">Kondisi tanah yang tidak memadai atau pH tidak seimbang</string>
    <string name="k11">Mati dengan agak mendadak</string>
    <string name="k12">Terdapat telur di permukaan daun</string>
    <string name="k13">Tidak ada</string>
    <string name="plant1">Andewi</string>
    <string name="plant2">Selada</string>
    <string name="plant3">Sawi</string>
    <string name="plant4">Bawang</string>
    <string name="plant5">Seledri</string>
    <string name="ap01">Busuk daun jamur</string>
    <string name="ap02">Karat</string>
    <string name="sp01">Busuk Daun</string>
    <string name="sp02">Busuk Rhizoctonia</string>
    <string name="sp03">Bercak daun</string>
    <string name="sp04">Busuk daun abu</string>
    <string name="sp05">Busuk daun Choanephora</string>
    <string name="sp06">Bercak daun stemphylium</string>
    <string name="sp07">Busuk bakteri</string>
    <string name="sp08">Mosaik</string>
    <string name="wp01">Busuk hati/jantung sawi</string>
    <string name="wp02">Busuk basah</string>
    <string name="wp03">Busuk hitam</string>
    <string name="wp04">Hawar Daun</string>
    <string name="wp05">Krop Kusam</string>
    <string name="wp06">Ulat perusak daun</string>
    <string name="wp07">Ulat tanah</string>
    <string name="wp08">Ulat grayak</string>
    <string name="wp09">Leaf miner</string>
    <string name="bp01">Bercak ungu</string>
    <string name="bp02">Bercak daun cercospora</string>
    <string name="bp03">Busuk daun</string>
    <string name="bp04">Busuk bibit</string>
    <string name="bp05">Busuk Umbi Fusarium</string>
    <string name="bp06">Busuk Putih</string>
    <string name="bp07">Antraknosa</string>
    <string name="bp08">Mati ujung</string>
    <string name="bp09">Busuk Leher Batang</string>
    <string name="bp10">Penyakit Akar Merah Jambu</string>
    <string name="lp01">Bercak daun septoria</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



</resources>
