<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/bawangq1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques1"
            android:textColor="@color/secondary_color"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/cb_B1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a01"
            app:layout_constraintTop_toBottomOf="@id/bawangq1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <CheckBox
            android:id="@+id/cb_B1_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a02"
            app:layout_constraintTop_toBottomOf="@id/cb_B1_1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <CheckBox
            android:id="@+id/cb_B1_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a03"
            app:layout_constraintTop_toBottomOf="@id/cb_B1_2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <CheckBox
            android:id="@+id/cb_B1_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a10"
            app:layout_constraintTop_toBottomOf="@id/cb_B1_3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <CheckBox
            android:id="@+id/cb_B1_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a11"
            app:layout_constraintTop_toBottomOf="@id/cb_B1_4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <CheckBox
            android:id="@+id/cb_B1_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a15"
            app:layout_constraintTop_toBottomOf="@id/cb_B1_5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <CheckBox
            android:id="@+id/cb_B1_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a16"
            app:layout_constraintTop_toBottomOf="@id/cb_B1_6"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <CheckBox
            android:id="@+id/cb_B1_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a17"
            app:layout_constraintTop_toBottomOf="@id/cb_B1_7"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <CheckBox
            android:id="@+id/cb_B1_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a18"
            app:layout_constraintTop_toBottomOf="@id/cb_B1_8"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <CheckBox
            android:id="@+id/cb_B1_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a19"
            app:layout_constraintTop_toBottomOf="@id/cb_B1_9"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <CheckBox
            android:id="@+id/cb_B1_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a20"
            app:layout_constraintTop_toBottomOf="@id/cb_B1_10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <CheckBox
            android:id="@+id/cb_B1_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a21"
            app:layout_constraintTop_toBottomOf="@id/cb_B1_11"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <CheckBox
            android:id="@+id/cb_B1_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a22"
            app:layout_constraintTop_toBottomOf="@id/cb_B1_12"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <CheckBox
            android:id="@+id/cb_B1_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a23"
            app:layout_constraintTop_toBottomOf="@id/cb_B1_13"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <CheckBox
            android:id="@+id/cb_B1_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a24"
            app:layout_constraintTop_toBottomOf="@id/cb_B1_14"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <CheckBox
            android:id="@+id/cb_B1_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a25"
            app:layout_constraintTop_toBottomOf="@id/cb_B1_15"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <Button
            android:id="@+id/buttonNextB1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Selanjutnya"
            app:layout_constraintTop_toBottomOf="@id/cb_B1_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
