<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/sawiq1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ques1"
        android:textSize="20sp"
        android:textColor="@color/secondary_color"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cb_SW1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a01"
        app:layout_constraintTop_toBottomOf="@id/sawiq1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_SW1_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a02"
        app:layout_constraintTop_toBottomOf="@id/cb_SW1_1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_SW1_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a03"
        app:layout_constraintTop_toBottomOf="@id/cb_SW1_2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_SW1_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a09"
        app:layout_constraintTop_toBottomOf="@id/cb_SW1_3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_SW1_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a10"
        app:layout_constraintTop_toBottomOf="@id/cb_SW1_4"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_SW1_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a11"
        app:layout_constraintTop_toBottomOf="@id/cb_SW1_5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_SW1_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a12"
        app:layout_constraintTop_toBottomOf="@id/cb_SW1_6"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_SW1_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a13"
        app:layout_constraintTop_toBottomOf="@id/cb_SW1_7"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_SW1_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a14"
        app:layout_constraintTop_toBottomOf="@id/cb_SW1_8"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_SW1_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a22"
        app:layout_constraintTop_toBottomOf="@id/cb_SW1_9"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/buttonNextSW1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selanjutnya"
        app:layout_constraintTop_toBottomOf="@id/cb_SW1_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
