<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/sawiq4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ques4"
        android:textSize="20sp"
        android:textColor="@color/secondary_color"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cb_SW4_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l01"
        app:layout_constraintTop_toBottomOf="@id/sawiq4"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_SW4_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l02"
        app:layout_constraintTop_toBottomOf="@id/cb_SW4_1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_SW4_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l11"
        app:layout_constraintTop_toBottomOf="@id/cb_SW4_2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_SW4_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l12"
        app:layout_constraintTop_toBottomOf="@id/cb_SW4_3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_SW4_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l13"
        app:layout_constraintTop_toBottomOf="@id/cb_SW4_4"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_SW4_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l14"
        app:layout_constraintTop_toBottomOf="@id/cb_SW4_5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_SW4_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l15"
        app:layout_constraintTop_toBottomOf="@id/cb_SW4_6"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_SW4_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l16"
        app:layout_constraintTop_toBottomOf="@id/cb_SW4_7"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_SW4_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l17"
        app:layout_constraintTop_toBottomOf="@id/cb_SW4_8"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_SW4_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l18"
        app:layout_constraintTop_toBottomOf="@id/cb_SW4_9"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/buttonNextSW4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selanjutnya"
        app:layout_constraintTop_toBottomOf="@id/cb_SW4_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
