<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/bawangq2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ques1"
        android:textColor="@color/secondary_color"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cb_B2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b04"
        app:layout_constraintTop_toBottomOf="@id/bawangq2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_B2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b07"
        app:layout_constraintTop_toBottomOf="@id/cb_B2_1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_B2_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b11"
        app:layout_constraintTop_toBottomOf="@id/cb_B2_2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_B2_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b14"
        app:layout_constraintTop_toBottomOf="@id/cb_B2_3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_B2_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b15"
        app:layout_constraintTop_toBottomOf="@id/cb_B2_4"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_B2_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b16"
        app:layout_constraintTop_toBottomOf="@id/cb_B2_5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_B2_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b17"
        app:layout_constraintTop_toBottomOf="@id/cb_B2_6"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_B2_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b19"
        app:layout_constraintTop_toBottomOf="@id/cb_B2_7"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_B2_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b21"
        app:layout_constraintTop_toBottomOf="@id/cb_B2_8"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/buttonNextB2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selanjutnya"
        app:layout_constraintTop_toBottomOf="@id/cb_B2_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>