<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color">

    <Button
        android:id="@+id/buttonNextA2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selanjutnya"
        app:layout_constraintTop_toBottomOf="@id/cb_A2_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/andewiq2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ques2"
        android:textSize="20sp"
        android:textColor="@color/secondary_color"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"/>

    <CheckBox
        android:id="@+id/cb_A2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b01"
        app:layout_constraintTop_toBottomOf="@id/andewiq2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_A2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b02"
        app:layout_constraintTop_toBottomOf="@id/cb_A2_1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
